--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,9 @@
 </head>
 <body>
     <main>
-        <div class="drawing-container"></div>
+        <div class="drawing-container">
+            <canvas class="whiteboard"></canvas>
+        </div>
         <div class="chat-container">
             <ul class="chat"></ul>
             <form class="chat-input">
@@ -21,5 +23,6 @@
     </main>
     <script src="/socket.io/socket.io.js"></script>
     <script src="client.js"></script>
+    <script src="sketch.js"></script>
 </body>
 </html>
