--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,19 @@
 </head>
 <body>
     <main>
+        <div class="color-selector">
+            <img class="color-icon" src="./assets/images/color-icon.png">
+            <button class="color black"></button>
+            <button class="color red"></button>
+            <button class="color blue"></button>
+            <button class="color green"></button>
+            <button class="color yellow"></button>
+            <button class="color orange"></button>
+            <button class="color purple"></button>
+            <button class="color pink"></button>
+            <button class="color brown"></button>
+            <button class="color white"></button>
+        </div>
         <canvas class="whiteboard"></canvas>
     </main>
     <aside>
