--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,14 @@
             <button class="color brown"></button>
             <button class="color white"></button>
         </div>
+        <div class="stroke-selector">
+            <img class="stroke-icon" src="./assets/images/stroke-icon.png">
+            <button class="stroke small"></button>
+            <button class="stroke medium"></button>
+            <button class="stroke large"></button>
+            <button class="stroke big"></button>
+            <button class="stroke huge"></button>
+        </div>
         <canvas class="whiteboard"></canvas>
     </main>
     <aside>
