--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,7 @@
             <button class="stroke big"></button>
             <button class="stroke huge"></button>
         </div>
+        <div id="pointers"></div>
         <canvas class="whiteboard"></canvas>
     </main>
     <aside>
@@ -55,5 +56,6 @@
     <script src="/socket.io/socket.io.js"></script>
     <script src="client.js"></script>
     <script src="sketch.js"></script>
+    <script src="mouse.js"></script>
 </body>
 </html>
