Final code commit

--- a/public/index.html
+++ b/public/index.html
@@ -53,6 +53,11 @@
             </div>
         </div>
     </aside>
+    <div class="warn">
+        <p>U bent momenteel offline</p>
+        <p>Wacht aub totdat we een nieuwe connectie hebben vastgesteld</p>
+        <div class="lds-ring"><div></div><div></div><div></div><div></div></div>
+    </div>
     <script src="/socket.io/socket.io.js"></script>
     <script src="client.js"></script>
     <script src="sketch.js"></script>
