--- a/public/index.html
+++ b/public/index.html
@@ -46,8 +46,8 @@
                 </div>
                 <div class="chat-footer">
                     <form id="chat-form">
-                        <input id="msg" type="text" placeholder="Enter Message" required autocomplete="off">
-                        <button class="btn">Send</button>
+                        <input id="msg" type="text" placeholder="Typ een bericht in of gebruik /giphy" required autocomplete="off">
+                        <button class="btn">Versturen</button>
                     </form>
                 </div>
             </div>
